syntax = "proto3";

package protobuf;
import "google/protobuf/timestamp.proto";

message Project {
    int64 id = 1;
    string title = 2;
    string repository = 3;
}

message Repository {
    int64 id = 1;
    string name = 2;
    string key = 3;
    repeated Branch branches = 4;
}

message Branch {
    int64 id = 1;
    string name = 2;
    repeated Commit commits = 3;
}

message Commit {
    string message = 1;
    string sha = 2;
    google.protobuf.Timestamp timestamp = 3;
}

enum StatusType {
    UNKNOWN = 0;
    SUCCESS = 1;
    ERROR = 2;
    WARNING = 3;
    PENDING = 4;
}

message Message {
    int64 id = 1;
    google.protobuf.Timestamp timestamp = 2;
    string message = 3;
    StatusType status = 4;
}

service NabuService {
    rpc CreateProject (CreateProjectRequest) returns (ListProjectsResponse);
    rpc ListProjects (EmptyRequest) returns (stream ListProjectsResponse);
    rpc ListCommits (ProjectRequest) returns (stream ListCommitsResponse);
    rpc Build (BuildRequest) returns (stream BuildResponse);
}

message BuildRequest {
    int64 project_id = 1;
    string sha = 2;
}

message BuildResponse {
    Message message = 1;
}

message ListProjectsResponse {
    Project project = 1;
}

message ListCommitsResponse {
    Commit commit = 1;
}

message EmptyRequest {
}

message ProjectRequest {
    int64 id = 1;
}

message CreateProjectRequest {
    string name = 1;
    Repository repository = 2;
}